2008-03-19  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.2

2008-03-17 21:00-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSView.m: Changes to beginPage:... and endPage to correct
	issues with blank space at the top of the page when printing.

2008-03-16 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSApplication.m : changed terminate type to BOOL
	  since it is one and the value froma delegate got wrongly
	  casted

2008-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m (-_premultiply, _unpremultiply):
	Optimized a bit.
	* Source/NSBitmapImageRep.m (-draw): Premultiply the image before
	drawing. 

2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (-_setSelected:): 
	Undo last hack and add a slightly better on.
	
2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarItem.m (GSToolbarButton-sendAction:to:): 
	Add a recursion break hack. Needs to be cleaned up.
	
2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_initOutlineDefaults): New helper
	method extracting code from initWithFrame: and initWithCoder:.
	* Source/NSOutlineView.m (-itemAtRow:): Return nil for invalid row
	numbers. 
	Patch by Quentin Mathe <qmathe@club-internet.fr>. 

2008-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: deminiaturize window in -makeKeyAndOrderFront:
	(bug #22444) as I tested and confirmed that implicit deminiaturisation
	is done here on MacOSX.

2008-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/make_services.m: Standardise paths to avoid error reports when
	two paths point to the same app.

2008-03-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-performClickWithFrame:inView:): Call
	sendAction:to: on control even when there is no action.

2008-03-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m
	(-observeValueForKeyPath:ofObject:change:context:): Ignore calls
	with empty change information.
